First file check in

--- a/index.html
+++ b/index.html
@@ -138,10 +138,8 @@
 			</div>
 
             <footer class="footer">
-               <!---- <p class="pull-right"><a href="./index.htm">Top</a></p>-->
-                <p>Built with <a href="http://twitter.github.com/bootstrap/">Bootstrap</a>.Last update: Sep-2015</p>
-                <p>© MDL & HPCL @ CSE, Penn State &nbsp; &nbsp; &nbsp; </p>
-              
+                <p>Last update: Sep-2015</p>
+                <p>© MDL & HPCL @ CSE, Penn State &nbsp; &nbsp; &nbsp; </p>              
             </footer>
         </div>
 
